@@ -1,3 +1,7 @@
+2011-06-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/Renderer/RPC.pm: New RPC method: AGGREGATE_DS
+
 2011-06-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/Scheduler.pm, perllib/Torrus/Collector.pm: repeat
